[gd_scene load_steps=4 format=3 uid="uid://hxjkdjl5lxga"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_2lsar"]
[ext_resource type="StyleBox" uid="uid://cctn4j5n5fhb5" path="res://scenes/ui/background.stylebox" id="2_e7ycr"]
[ext_resource type="Texture2D" uid="uid://7nnlcxklao7h" path="res://assets/icons/sound-max-svgrepo-com.svg" id="2_jprv3"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2lsar")

[node name="LevelName" type="Label" parent="."]
layout_mode = 0
offset_right = 29.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("2_e7ycr")

[node name="ButtonsVBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 90)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 246.0
offset_right = 90.0
offset_bottom = 476.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "resume"

[node name="RestartButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "restart level"

[node name="ExitButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "exit to the menu"

[node name="SkipButton" type="Button" parent="ButtonsVBox"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
tooltip_text = "skill issue"
theme_override_font_sizes/font_size = 30
text = "skip this level"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 100.0
offset_right = 92.5
offset_bottom = 184.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("2_e7ycr")
text = "pause"
horizontal_alignment = 1

[node name="Mute" type="Button" parent="."]
layout_mode = 0
offset_left = 1186.0
offset_top = 99.0
offset_right = 1266.0
offset_bottom = 179.0
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
icon = ExtResource("2_jprv3")
flat = true
